[project]
name = "custom-rag-agent"
version = "0.1.0"
description = "Minimal RAG agent example based on LangGraph and DashScope"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "dashscope>=1.25.17",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.31",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.1.6",
    "pydantic>=2.13.1",
    "python-dotenv>=1.2.2",
    "tiktoken>=0.12.0",
]

[[tool.uv.index]]
url = "https://mirrors.cloud.tencent.com/pypi/simple/"
default = true
